syntax = "proto2";
package proto;
import "proto.proto";


enum SqlType {
  insert   = 1;
  update   = 2;
  delete   = 3;
}

message binRecord {
	required SqlType type = 1;
	required string  table = 2;
	required string  key = 3;
	repeated field   fields  = 4;
}